# Find_vocab_order

./: .gitignore  README.md  pyproject.toml  seed_words.txt  seed_words_simple.txt  sentence_cache.csv  vocab_order_comparison.csv  vocab_order_min_surprise.py  vocab_order_min_surprise_N5_test.py  vocab_order_min_surprise_scc.py
results/: vocab_order_comparison.csv
