[project]
name = "find-vocab-order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi>=1.4.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "unidic-lite>=1.0.8",
]
